--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,7 @@ span{
 /* Shop Section */
 .shop-section{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: #e2e7e6;
 }
@@ -154,7 +155,7 @@ span{
     width: 23%;
     background-color: white;
     padding: 20px 0px 15px;
-    margin: 15px;
+    margin-top: 15px;
 }
 .box-image{
     height: 300px;
@@ -169,4 +170,41 @@ span{
 }
 .box-content p{
     color: #007185;
+}
+.box:hover{
+    border: 2px solid white;
+}
+/* Footer */
+
+.footer{
+    margin-top: 15px;
+}
+.foot-panel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+}
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 400px;
+    display: flex;
+    justify-content: space-evenly;
+}
+ul{
+    margin-top: 20px;
+}
+ul a{
+    display: block;
+    font-size: 0.85rem;margin-top: 10px;
+    color: #dddddd;
+}
+.foot-panel3{
+    background-color: #222f3d;
+    border-top: 0.5px solid white;
+    height: 70px;
 }
