--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,16 @@ ul a{
     border-top: 0.5px solid white;
     height: 70px;
 }
+.foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 80px;
+    font-size: 0.9rem;
+    text-align: center;
+}
+.pages{
+    padding-top: 25px;
+}
+.copy-right{
+    padding-top: 5px;
+}
