--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
     background-image: url("amazon_logo.png");
     background-size: cover;
     height: 50px;
-    width: 100%;
+    width: 100px;
 }
 .border{
     border: 1.5px solid transparent;
@@ -207,6 +207,9 @@ ul a{
     background-color: #222f3d;
     border-top: 0.5px solid white;
     height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .foot-panel4{
     background-color: #0f1111;
